2012-06-14  Edaena Salinas Jasso  <edaena@apple.com>

        el.getAttribute('type') returns 'null' when setting el.type to null
        https://bugs.webkit.org/show_bug.cgi?id=89030

        Reviewed by Alexey Proskuryakov.

        * fast/dom/HTMLButtonElement/change-type-expected.txt: Updated the expected output
        so that it matches the null return type of getAttribute('type').
        * fast/dom/HTMLButtonElement/change-type.html: Change test of getAttribute('type')
        to be null instead of 'null'. Addressed and unrelated review comment from bug 14439
        about how 'undefined' is specified in the shouldBe function.

2012-06-14  Alec Flett  <alecflett@chromium.org>

        IndexedDB: Creating a transaction from within a transaction callback should fail
        https://bugs.webkit.org/show_bug.cgi?id=80547

        Reviewed by Tony Chang.

        * storage/indexeddb/cursor-update-expected.txt:
        * storage/indexeddb/database-basics-expected.txt:
        * storage/indexeddb/mozilla/cursor-update-updates-indexes-expected.txt:
        * storage/indexeddb/mozilla/resources/cursor-update-updates-indexes.js:
        (setupObjectStoreAndCreateIndexAndAdd.transaction.oncomplete):
        (setupObjectStoreAndCreateIndexAndAdd):
        * storage/indexeddb/mozilla/resources/object-store-remove-values.js:
        (createObjectStore):
        (finalCheck):
        * storage/indexeddb/mozilla/resources/remove-objectstore.js:
        (createAndPopulateObjectStore):
        (postSetVersion2.request.onsuccess):
        (postSetVersion2):
        (deleteSecondObjectStore):
        * storage/indexeddb/resources/cursor-update.js:
        (openBasicCursor):
        (keyCursor):
        (testReadOnly):
        (attemptUpdate):
        * storage/indexeddb/resources/database-basics.js:
        (openSuccess.request.onsuccess):
        (openSuccess):
        (setVersionSuccess.request.onsuccess):
        (setVersionSuccess):
        (createObjectStore):