@@ -1,3 +1,15 @@
+2012-06-14  Matt Falkenhagen  <falken@chromium.org>
+
+        LocaleToScriptMappingDefault.cpp should also do what scriptCodeForFontSelection does in LocaleToScriptMappingICU.cpp
+        https://bugs.webkit.org/show_bug.cgi?id=88845
+
+        Reviewed by Kent Tamura.
+
+        Test: fast/text/international/jpan-script-equivalence.html
+
+        * platform/text/LocaleToScriptMappingDefault.cpp:
+        (WebCore::scriptNameToCode):
+
 2012-06-14  Pavel Feldman  <pfeldman@chromium.org>
 
         Web Inspector: render dock-to-right icon in status bar.
